...
                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                        <color key="textColor" name="color_gray"/>
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Au4-8e-08T">
                                                                        <rect key="frame" x="0.0" y="17" width="374" height="48"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="email_txtField"/>
                                                                        <constraints>
                                                                            <constraint firstAttribute="height" constant="48" id="xPg-sG-AVu"/>
                                                                        </constraints>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                                        <textInputTraits key="textInputTraits"/>
                                                                    </textField>
...
                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                        <color key="textColor" name="color_gray"/>
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cie-Ed-8Nq">
                                                                        <rect key="frame" x="0.0" y="17" width="374" height="48"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="password_txtField"/>
                                                                        <constraints>
                                                                            <constraint firstAttribute="height" constant="48" id="U6D-iB-8Sj"/>
                                                                        </constraints>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                                    </textField>
...
                                                                    <action selector="btnSignInWithGoogleTapped:" destination="4EJ-Nv-NHm" eventType="touchUpInside" id="NN8-Ra-0iF"/>
                                                                </connections>
                                                            </button>
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GxI-zM-kvh">
                                                                <rect key="frame" x="0.0" y="144" width="374" height="48"/>
                                                                <color key="backgroundColor" name="primary_color"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="confirm_button"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="48" id="dp4-Cm-UD9"/>
                                                                </constraints>
                                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                                <state key="normal" title="Confirm">
...
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <color key="textColor" name="color_red"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <color key="backgroundColor" name="color_light_red"/>
                                <accessibility key="accessibilityConfiguration" identifier="error_view">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstItem="G5W-TW-Qao" firstAttribute="centerY" secondItem="omr-Re-mGy" secondAttribute="centerY" constant="16" id="1bR-Cz-FfU"/>
                                    <constraint firstAttribute="trailing" secondItem="G5W-TW-Qao" secondAttribute="trailing" id="702-4y-lDG"/>
                                    <constraint firstAttribute="height" constant="80" id="NWR-58-EMn"/>
...
