...
        tableViewMovies.registerForCell(identifier: WelcomeMessageTableViewCell.identifier)
        tableViewMovies.registerForCell(identifier: MovieSectionTableViewCell.identifier)
    }
    
    private func setupNavBar() {
        self.navigationItem.backButtonTitle = ""
        self.navigationItem.rightBarButtonItem?.accessibilityIdentifier = "search_button"
        self.navigationController?.navigationBar.tintColor = UIColor.white
        
    }
    
    
    //MARK: - Ontap Callbacks
...
